kubernetes/http-01/applications/traefik/traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.securedsoft.net`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: securedsoft-secret
